# Checkers

./: .gitignore  AiUser.cpp  Board.cpp  Board.h  CMakeLists.txt  Checker.cpp  Checker.h  Checker.h.gch  Game.cpp  Game.h  King.cpp  King.h  King.h.gch  KingChecker.cpp  KingChecker.h  KingChecker.h.gch  Main.cpp  Pawn.cpp  Pawn.h  Pawn.h.gch  Piece.cpp  Piece.h  Piece.h.gch  Pond.cpp  Queen.cpp  Queen.h  README.md  RegularUser.h  Rook.cpp  Rook.h  User.cpp  User.h  result  stats.txt
src/: .gitignore  AiUser.cpp  AiUser.h  Board.cpp  Board.h  Checker.cpp  Checker.h  Client.cpp  Client.h  Game.cpp  KingChecker.cpp  Main.cpp  NetworkUser.cpp  NetworkUser.h  Piece.cpp  RegularUser.cpp  Server.cpp  Server.h  User.cpp  User.h  result  stats.txt
tests/: CMakeLists.txt  attemptWrongMovesTest.cpp  getAvailableMovesTest.cpp  hopMoveTest.cpp  singleRowMoveTest.cpp
